[gd_scene load_steps=10 format=3 uid="uid://ba0rpqcw84arh"]

[ext_resource type="Script" path="res://assets/scripts/llamada.gd" id="1_ax2i4"]
[ext_resource type="Script" path="res://assets/scripts/osc_receiver.gd" id="3_rvgf8"]
[ext_resource type="Texture2D" uid="uid://galxlibqas01" path="res://assets/sprites/llamadas_finalizadas.png" id="6_fji2q"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCServer.gd" id="22_epe1x"]
[ext_resource type="Script" path="res://addons/godOSC/scripts/OSCClient.gd" id="24_ph7x7"]
[ext_resource type="Script" path="res://assets/scripts/osc_message.gd" id="25_pdlhb"]

[sub_resource type="Gradient" id="Gradient_qjtu3"]
offsets = PackedFloat32Array(0.955224, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ukweh"]
gradient = SubResource("Gradient_qjtu3")

[sub_resource type="CanvasTexture" id="CanvasTexture_snyqg"]
diffuse_texture = SubResource("GradientTexture1D_ukweh")

[node name="Llamada" type="Node"]
script = ExtResource("1_ax2i4")
pantalla_actual = 4

[node name="OSCServer" type="Node" parent="."]
script = ExtResource("22_epe1x")
port = 7000

[node name="OSCReceiver" type="Node" parent="OSCServer" node_paths=PackedStringArray("target_server")]
script = ExtResource("3_rvgf8")
target_server = NodePath("..")
osc_address = "/llamada"

[node name="OSCClient" type="Node" parent="."]
script = ExtResource("24_ph7x7")
port = 9000

[node name="OSCMessage" type="Node" parent="OSCClient" node_paths=PackedStringArray("target_client")]
script = ExtResource("25_pdlhb")
target_client = NodePath("..")
osc_address = "/inter"

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_snyqg")

[node name="PantallaActual" type="Node2D" parent="."]

[node name="Llamada" type="Node2D" parent="."]

[node name="LlamadasFinalizadas" type="Sprite2D" parent="."]
visible = false
position = Vector2(982, 540)
texture = ExtResource("6_fji2q")

[connection signal="actividad_terminada" from="OSCServer/OSCReceiver" to="." method="_on_osc_receiver_actividad_terminada"]
[connection signal="nucleo_terminado" from="OSCServer/OSCReceiver" to="." method="_on_llamada_finalizada"]
[connection signal="reiniciar" from="OSCServer/OSCReceiver" to="." method="_reiniciar"]
